k8s/apps/truescrub/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: truescrub-grpc
spec:
  parentRefs:
    - name: external-gateway
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - matches:
        - method:
            service: "truescrub.rpc.highlights.HighlightsService"
        - method:
            service: "truescrub.rpc.leaderboard.LeaderboardService"
        - method:
            service: "truescrub.rpc.matchmaking.MatchmakingService"
        - method:
            service: "truescrub.rpc.season.SeasonService"
        - method:
            service: "truescrub.rpc.profile.ProfileService"
        - method:
            service: "truescrub.ConfigService"
      backendRefs:
        - name: truescrub
          port: 9900
