k8s/apps/truescrub/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truescrub-https
spec:
  parentRefs:
    - name: external-gateway
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.html
      backendRefs:
        - name: client
          port: 80
    - matches:
        - path:
            type: Exact
            value: /accolades
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.html
      backendRefs:
        - name: client
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /matchmaking
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.html
      backendRefs:
        - name: client
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /htdocs
      backendRefs:
        - name: client
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: truescrub
          port: 9000
