k8s/apps/truescrub/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: truescrub
spec:
  podSelector:
    matchLabels:
      app: truescrub
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: external-gateway
      ports:
        - port: 9000
          protocol: TCP
        - port: 9900
          protocol: TCP
